# mbed-hal-k22f

./: module.json
mbed-hal/: PinDefs.h  chip_pins.array
source/: CMakeLists.txt
